modify image upload

--- a/image-upload.html
+++ b/image-upload.html
@@ -13,33 +13,29 @@
       const texture = gl.createTexture();
       gl.bindTexture(gl.TEXTURE_2D, texture);
 
-      fetch("https://gw.alipayobjects.com/mdn/rms_d14fdd/afts/img/A*5pKFSIF722MAAAAAAAAAAAAAARQnAQ")
-        .then((res) => res.arrayBuffer())
-        .then((ab) => {
-          const arr = [];
-          let start = Date.now();
-          for (let i = 0; i < 500; i++) {
-            arr.push(createImage(new Blob([ab], { type: "image/png" })));
-          }
-          Promise.all(arr).then((images) => {
-            console.log(`create Image cost: `, Date.now() - start);
-            images.forEach((image) => {
-              gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, image);
-            });
-            console.log(`total upload cost: `, Date.now() - start);
-          });
+      const arr = [];
+      for (let i = 0; i < 100; i++) {
+        arr.push(requestImage(`./imgs/${i + 1}.jpg`));
+      }
+      Promise.all(arr).then((images) => {
+        let start = Date.now();
+        images.forEach((image) => {
+          gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, image);
         });
+        console.log(`total upload cost: `, Date.now() - start);
+      });
 
-      function createImage(blob) {
+      function requestImage(url) {
         return new Promise((resolve) => {
           const image = new Image();
+          image.crossOrigin = "anonymous";
+          image.src = url;
           image.onload = () => {
             resolve(image);
           };
           image.onerror = (err) => {
             console.log(err);
           };
-          image.src = URL.createObjectURL(blob);
         });
       }
     </script>
