--- a/bitmap-blob.html
+++ b/bitmap-blob.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div>使用 createImageBitmap 解码，用 Blob 作为源数据</div>
     <canvas id="canvas"></canvas>
     <script>
       const canvas = document.getElementById("canvas");
