--- a/bitmap-decode-worker.html
+++ b/bitmap-decode-worker.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div>使用 5 个 worker 线程调用 createImageBitmap 解码，以 blob 为源数据</div>
     <canvas id="canvas"></canvas>
     <script>
       const canvas = document.getElementById("canvas");
