--- a/image-upload-decode.html
+++ b/image-upload-decode.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>image decode</title>
   </head>
   <body>
+    <div>使用 image decode 方法解码</div>
     <canvas id="canvas"></canvas>
     <script>
       const canvas = document.getElementById("canvas");
