--- a/image-upload.html
+++ b/image-upload.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>basic</title>
   </head>
   <body>
+    <div>直接上传 Image 对象，作为对照</div>
     <canvas id="canvas"></canvas>
     <script>
       const canvas = document.getElementById("canvas");
