--- a/bitmap-blob.html
+++ b/bitmap-blob.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>decode blob</title>
+    <script src="eruda/eruda.js"></script>
+    <script>eruda.init();</script>
   </head>
   <body>
     <div>使用 createImageBitmap 解码，用 Blob 作为源数据</div>
