--- a/bitmap-decode-worker.html
+++ b/bitmap-decode-worker.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>worker decoder</title>
+    <script src="eruda/eruda.js"></script>
+    <script>eruda.init();</script>
   </head>
   <body>
     <div>使用 5 个 worker 线程调用 createImageBitmap 解码，以 blob 为源数据</div>
