--- a/image-bitmap-upload.html
+++ b/image-bitmap-upload.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>image-bitmap</title>
+    <script src="eruda/eruda.js"></script>
+    <script>eruda.init();</script>
   </head>
   <body>
     <div>使用 createImageBitmap 解码，用 Image 对象作为源信息</div>
