--- a/image-upload.html
+++ b/image-upload.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>basic</title>
+    <script src="eruda/eruda.js"></script>
+    <script>eruda.init();</script>
   </head>
   <body>
     <div>直接上传 Image 对象，作为对照</div>
